frontend/test/should_pass/bitbucket10.gm
node class MyNode {
    key:int;
}
index MyNode_Key { MyNode.key }

node class MyOtherNode {
    foreignKey:int;
}
