frontend/test/should_fail/index_edge_where_non_index_expected_model.gm
edge class E
{
	i : int;
}

index fooi { E.i }
